Added DB lookup

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Register.Areas.Manage.Controllers": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
